# Proofgrade

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
analysis/: __init__.py  build_final_imo_remaining_error_atlas.py  build_imo_casebook.py  build_imo_result_tables.py  direct_imo_utils.py  run_final_imo_ablation.py  run_final_imo_lockbox_test.py  run_fresh_generalization_eval.py
configs/baseline_freeze/: final_imo_lock.yaml  final_imo_lockbox_test.yaml  final_imo_release.yaml  fresh_generalization_eval.yaml
configs/runtime/: default.yaml
docs/: api.md  architecture.md  benchmark_results.md  casebook.md  configuration.md  deployment.md  limitations.md  model_providers.md  product_positioning.md  public_scope_decision.md  release_audit.md  release_final_report.md  reproducibility.md
examples/: batch.jsonl  guidelines.txt  problem.txt  solution.txt  student_answer.txt
proofgrade/: __init__.py  __main__.py  _frozen_imo_policy.py  _gemini_backend.py  api.py  benchmark.py  cli.py  config.py  exceptions.py  grader.py  logging.py  policy.py  providers.py  schemas.py  version.py
tests/: test_final_imo_lock.py  test_final_imo_release.py  test_proofgrade_api.py  test_proofgrade_runtime.py
(+90 files in other folders)
